--- a/NoticiasAPI/gradle/libs.versions.toml
+++ b/NoticiasAPI/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ gson = "2.9.0"
 activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 navigationRuntimeKtx = "2.8.4"
+appcompat = "1.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -30,6 +31,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref ="retrofit"}
 gson = { module = "com.squareup.retrofit2:converter-gson", version.ref ="gson"}
 androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
